# rust-hello-world

./: .env  Cargo.toml
config/: config.toml
deploy/: docker-compose.yaml  tickets.sql
src/: main.rs
src/config/: configs.rs  mod.rs  mysql.rs
src/entity/: mod.rs  prelude.rs  tickets.rs
src/router/: routers.rs
src/service/: admin.rs  concur.rs  mod.rs  tickets.rs  util.rs
