[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sea-orm = { version = "1.0.0", features = ["sqlx-mysql", "runtime-async-std", "macros", "with-chrono", "with-json"], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.0.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
toml = "0.8.19"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.93"
